--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2446,7 +2446,7 @@ button {
 }
 
 .hero-slider-two.style-two .hero-slider-bg {
-	background-color: rgba(0, 147, 136, 0.9);
+	background-color: #499afa;
 }
 
 .hero-slider-two.style-two .hero-slider-arrow {
